welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: type mismatch;
 found   : Double
 required: Int
  return somme / nums.length
               ^